--- a/android-app/app/build.gradle
+++ b/android-app/app/build.gradle
@@ -25,4 +25,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.google.firebase:firebase-ml-vision:18.0.2'
+    implementation 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
+    compile 'com.google.firebase:firebase-core:9.6.1'
 }
+apply plugin: 'com.google.gms.google-services'
