--- a/android-app/build.gradle
+++ b/android-app/build.gradle
@@ -4,11 +4,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenLocal()
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
-        
+        classpath 'com.google.gms:google-services:3.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,6 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenLocal()
         
     }
 }
