--- a/android-app/app/build.gradle
+++ b/android-app/app/build.gradle
@@ -28,5 +28,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-vision:18.0.2'
     implementation 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
     compile 'com.google.firebase:firebase-core:9.6.1'
+
+    implementation 'com.microsoft.projectoxford:face:1.4.3'
 }
 apply plugin: 'com.google.gms.google-services'
